Running experiment with no logging yet

--- a/public/index.html
+++ b/public/index.html
@@ -108,11 +108,28 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1 align="center">Menu 1 → Peppers </h1>
+        <h1 id="lblTask" align="center">Menu 1 → Peppers </h1>
       </div>
+
+      <div class="modal fade">
+        <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Modal title</h4>
+          </div>
+          <div class="modal-body">
+
+          </div>
+          <div class="modal-footer">
+            <button id="btnDismissModal" type="button" class="btn btn-success" data-dismiss="modal">Start</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
     </div> <!-- /container -->
     <script src="bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="experiment_manager.js"></script>
   </body>
 </html>
