--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Static Menus vs. Epehemeral Menus">
+    <meta name="author" content="Harihar Subramanyam">
     
-    <title>Fixed Top Navbar Example for Bootstrap</title>
+    <title>Static Menus vs. Epehemeral Menus</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css"><!-- load bootstrap -->
@@ -111,14 +111,14 @@
         <h1 id="lblTask" align="center">Menu 1 → Peppers </h1>
       </div>
 
-      <div class="modal fade">
+      <div class="modal fade likert_modal">
         <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title">Modal title</h4>
           </div>
           <div class="modal-body">
-
+            
           </div>
           <div class="modal-footer">
             <button id="btnDismissModal" type="button" class="btn btn-success" data-dismiss="modal">Start</button>
