--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,6 @@
 
 
     <!-- Custom styles for this template -->
-    <script src="jquery.js"></script><!-- load jquery -->
     <link href="index.css" rel="stylesheet">
 
   </head>
@@ -128,6 +127,10 @@
     </div><!-- /.modal -->
 
     </div> <!-- /container -->
+
+    <script src="jquery.js"></script><!-- load jquery -->
+    <script type="text/javascript" src="api_keys.js"></script>
+    <script src="//www.parsecdn.com/js/parse-1.2.18.min.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="experiment_manager.js"></script>
