--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -130,7 +129,7 @@
 
     <script src="jquery.js"></script><!-- load jquery -->
     <script type="text/javascript" src="api_keys.js"></script>
-    <script src="//www.parsecdn.com/js/parse-1.2.18.min.js"></script>
+    <script src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="experiment_manager.js"></script>
