User ID from server

--- a/public/likert_scale.html
+++ b/public/likert_scale.html
@@ -51,6 +51,7 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
     <script src="bootstrap/js/bootstrap.js"></script>
+    <script src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
     <script type="text/javascript" src="likert_scale.js"></script>
 </body>
 </html>
