--- a/public/likert_scale.html
+++ b/public/likert_scale.html
@@ -50,6 +50,7 @@
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+    <script type="text/javascript" src="api_keys.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
     <script src="http://www.parsecdn.com/js/parse-1.2.18.min.js"></script>
     <script type="text/javascript" src="likert_scale.js"></script>
